Submitting the PA1-Updated3

--- a/PA1_template.html
+++ b/PA1_template.html
@@ -325,7 +325,7 @@ impdatamedian&lt;-median(impdaysum$steps) ## Calculating Median
 
 <p>As you can see, the mean value did not change at all after imputing the missing values and the median value has only slightly increased.</p>
 
-<p>This means that the impact of imputing missing values on the estimates of the total daily number of steps was not big on the central tendecnies of the steps data.</p>
+<p>This means that the impact of imputing missing values on the estimates of the total daily number of steps was not big on the central tendencies of the steps data.</p>
 
 <h2>Are there differences in activity patterns between weekdays and weekends?</h2>
 
