Submitting the PA1-Updated6

--- a/PA1_template.html
+++ b/PA1_template.html
@@ -352,7 +352,8 @@ print(plot4)
 <ul>
 <li>Notice how on weekdays the number of steps appear to start increasing earlier in the day compared to weekend days.<br/></li>
 <li>Also notice how on weekdays there appears to be a large peak of number of steps between the intervals 750 and 1000. It is quite higher than the same interval on weekend days.<br/></li>
-<li>Additionally, see how between intervals 1000 and 1750 there seems to be more average steps on weekends compared to weekdays. - Moreover, towards the end of the day, the average number of steps seems to start their gradual final decrease at a later interval of the day during weekends compared to weekdays.</li>
+<li>Additionally, see how between intervals 1000 and 1750 there seems to be more average steps on weekends compared to weekdays.</li>
+<li>Moreover, towards the end of the day, the average number of steps seems to start their gradual final decrease at a later interval of the day during weekends compared to weekdays.</li>
 </ul>
 
 </body>
