Submitting the PA1-Updated7

--- a/PA1_template.html
+++ b/PA1_template.html
@@ -311,13 +311,23 @@ print(plot3)
 impdatamedian&lt;-median(impdaysum$steps) ## Calculating Median
 </code></pre>
 
-<p>The mean total number of steps taken per day <strong>after</strong> imputing the missing values is about <strong>10766.19</strong> and the median is about <strong>10766.19</strong>.</p>
+<p><strong>After</strong> imputing the missing data values:</p>
 
-<p>If you remember, the mean total number of steps taken per day <strong>before</strong> imputing the missing values was about <strong>10766.19</strong> and the median was <strong>10765</strong>.</p>
+<ul>
+<li>The mean total number of steps taken per day is about <strong>10766.19</strong></li>
+<li>The median total number of steps taken per day is about <strong>10766.19</strong></li>
+</ul>
+
+<p><strong>Before</strong> imputing the missing data values:</p>
+
+<ul>
+<li>The mean total number of steps taken per day was about <strong>10766.19</strong></li>
+<li>The median total number of steps taken per day was <strong>10765</strong></li>
+</ul>
 
 <p>As you can see, the mean value did not change at all after imputing the missing values and the median value has only slightly increased.</p>
 
-<p>This means that the impact of imputing missing values on the estimates of the total daily number of steps was not big on the central tendencies of the steps data.</p>
+<p>This means that the impact of imputing missing values on the estimates and central tendencies of the total daily number of steps was small.</p>
 
 <h2>Are there differences in activity patterns between weekdays and weekends?</h2>
 
