--- a/PA1_template.html
+++ b/PA1_template.html
@@ -366,7 +366,7 @@ print(plot4)
 <li>On weekdays there appears to be a large peak in the number of steps between the intervals 750 and 1000. It is quite higher than the same interval on weekend days.<br/></li>
 <li>Between intervals 1000 and 1750 there seems to be higher averages of steps on weekends compared to weekdays.</li>
 <li>Towards the end of the day, the averages of the number of steps at the weekend spike at around interval 2000 and then start 
-their gradual final decline while on weekdays, the spike happens at an earlier interval of the day and then start their gradual final decline.</li>
+their gradual final decline. On weekdays however, the spike happens at an earlier interval of the day and then start their gradual final decline.</li>
 </ul>
 
 </body>
